Adding second cluster to week 3
